# ThemePrism

./: .gitignore  Cargo.toml  README.md  build.rs  development_guidelines.md  product_architecture_plan.md  theme_generator_rust_tui_detailed_spec.md  themeprism_rust_tui_detailed_spec.md  third_party_libraries.md  tui_surface_interaction_model.md
docs/architecture/: cross-platform-ui-architecture.md  event-intent-effect.md  preview-architecture.md  viewtree-snapshot-viewmodel.md
docs/product/: product-architecture-plan.md  ui-control-abstraction-guide.md
docs/reference/: third-party-libraries.md
docs/superpowers/plans/: 2026-03-23-tui-interaction-tree-implementation.md  2026-04-01-command-palette-implementation.md  (+2 more)
exports/: alacritty-theme.toml  theme-template.txt
locales/en-US/: ui.ftl
locales/zh-CN/: ui.ftl
projects/: theme-project.toml
projects/exports/: alacritty-theme.toml
projects/projects/: theme-project.toml
src/: app.rs  branding.rs  color.rs  domain.rs  enum_meta.rs  evaluator.rs  main.rs  palette.rs  params.rs  preview.rs  rules.rs  tokens.rs  ui.rs
src/app/: actions.rs  command_palette.rs  controls.rs  effect.rs  hint_nav.rs  intent.rs  interaction.rs  mod.rs  snapshot.rs  state.rs  ui_meta.rs  update.rs  view.rs  workspace.rs
src/app/interaction/: mod.rs  state.rs  (+3 more)
src/core/: mod.rs  session.rs
src/export/: alacritty.rs  context.rs  managed_block.rs  mod.rs  template.rs
src/i18n/: mod.rs
src/persistence/: editor_config.rs  mod.rs  project_file.rs
src/platform/: effects.rs  mod.rs
templates/: alacritty.toml  generic-theme.txt
(+50 files in other folders)
