[package]
name = "theme"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.28.1"
directories = "6.0.0"
fluent-bundle = "0.16.0"
fluent-templates = "0.13.2"
palette = { version = "0.7.6", default-features = false, features = ["std"] }
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "0.9.8"
unic-langid = "0.9.6"

[build-dependencies]
cc = "1.2.0"

[dev-dependencies]
tempfile = "3.24.0"
